--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "antd": "^5.3.2",
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
+    "echarts": "^5.4.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mockjs": "^1.1.0"
   }
 }
